--- a/QookleApp/Views/RecipeListPage.xaml
+++ b/QookleApp/Views/RecipeListPage.xaml
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.RecipeListPage">
 	<ContentPage.Content>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="60*"/>
+				<RowDefinition Height="0"/>
+			</Grid.RowDefinitions>
+			<ListView Grid.Row="0" ItemsSource="{Binding RecipesLis}" >
+				<ListView.ItemTemplate>
+					<DataTemplate>
+						<TextCell Text="{Binding id}"/>
+
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+		</Grid>
 	</ContentPage.Content>
 </ContentPage>
