--- a/QookleApp/Views/MainPage.xaml
+++ b/QookleApp/Views/MainPage.xaml
@@ -1,20 +1,21 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage">
 	<ContentPage.Content>
-		<Grid>
+		<Grid >
 		<Grid.RowDefinitions>
-			<RowDefinition Height="10*"/>
-			<RowDefinition Height="50*"/>
+			<RowDefinition Height="50"/>
+			<RowDefinition Height="20"/>
 			<RowDefinition Height="50*"/>
 			<RowDefinition Height="50*"/>
 		</Grid.RowDefinitions>
-<Button Text="PRESS ME" Grid.Row="0" Command="{Binding SaveCommand}"/>
-			<ScrollView Orientation="Vertical" Grid.Row="1">
-				<StackLayout> 
-					<Entry Placeholder="Eneter ingredient"/>
-					<ListView Grid.Row="3"/>
-				</StackLayout>
-			</ScrollView>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*"/>
+		</Grid.ColumnDefinitions>
+			<Image Source="MainScreen.png" VerticalOptions="Fill" HorizontalOptions="Fill" Grid.RowSpan="4" Grid.Row="0"/>
+			<Button Text="Get Recipes" Grid.Row="0" Command="{Binding SaveCommand}" Grid.Column="0" />
+			<Entry Placeholder="Inserisci qui gli ingredienti" Grid.Row="1" TextChanged="TextChanged" x:Name="TextEntry"/>
+			<ListView ItemsSource="{Binding SearchListOfIngredients}" Grid.Row="2" ItemTapped="AddItemToResultList"/>
+			<ListView ItemsSource="{Binding SelectedListOfIngredients}" Grid.Row="3" ItemTapped="DeleteItemFromResultList"/>
 		</Grid>
 	</ContentPage.Content>
 </ContentPage>
