--- a/QookleApp/Views/MainPage.xaml
+++ b/QookleApp/Views/MainPage.xaml
@@ -1,35 +1,53 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
+<ContentPage 
+BackgroundImage="StartScreen.png"
+xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
 	<ContentPage.Content>
-	<ScrollView>
-		<Grid BackgroundColor="White" VerticalOptions="Fill" >
+		<Grid >
+
 		<Grid.RowDefinitions>
-			<RowDefinition Height="60"/>
-			<RowDefinition Height="120"/>
-			<RowDefinition >
-			<RowDefinition.Height>
-			<OnPlatform x:TypeArguments="GridLength">
-      			<OnPlatform.Android>40</OnPlatform.Android>
-    			<OnPlatform.iOS>20</OnPlatform.iOS>
-    		</OnPlatform>
-			</RowDefinition.Height>
-			</RowDefinition>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="1*"/>
-		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"/>
-		</Grid.ColumnDefinitions>
-			<Image Source="MainScreen.png" VerticalOptions="Fill" HorizontalOptions="Fill" Grid.RowSpan="5" Grid.Row="0"/>
-			<Button Text="Get Recipes" Grid.Row="4" BorderRadius="25" Command="{Binding SaveCommand}" Grid.Column="0" VerticalOptions="End"/>
-			<Entry Placeholder="Inserisci qui gli ingredienti" Grid.Row="2" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
-			<StackLayout Grid.Row="3">
-			<local:WrapLayout x:Name="SelectedIngredients"  Orientation="Horizontal"/>
-			<local:WrapLayout x:Name="IngresdientList"  Orientation="Horizontal"/>
+-			<RowDefinition Height="Auto"/>
+-			<RowDefinition Height="*"/>
+-			
+-			<RowDefinition Height="*"/>
+-			<RowDefinition Height="Auto"/>
+-		</Grid.RowDefinitions>
+
+-		<Grid.ColumnDefinitions>
+-			<ColumnDefinition Width="*"/>
+-			<ColumnDefinition Width="Auto"/>
+-		</Grid.ColumnDefinitions>
+
+
+			<StackLayout Grid.Row="0" HorizontalOptions="End" Padding="0, 0, 0, -20">
+				<local:RoundedImage HeightRequest="80" WidthRequest="80"  x:Name="FacebookImage" Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand"  />
 			</StackLayout>
+			<StackLayout Grid.Row="1">
+				<Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.png" VerticalOptions="Fill" HorizontalOptions="Fill"/>
+			</StackLayout>
+
+			<StackLayout Padding="8, 0, 8, 0" Grid.Row="1" VerticalOptions="End">
+				<Entry  BackgroundColor="White" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
+			</StackLayout>
+
+			<StackLayout Grid.Row="2" VerticalOptions="Start" Padding="12, 0, 12, 0">
+				<StackLayout Padding="0, 5, 0, 5">
+					<local:WrapLayout x:Name="SelectedIngredientsList"  Orientation="Horizontal"/>
+				</StackLayout>
+				<local:WrapLayout x:Name="SearchedIngredientsList"  Orientation="Horizontal"  />
+			</StackLayout>
+
+			<StackLayout Padding="0, 0, 0, 20"  Grid.Row="3">
+				<local:RoundedImage Source="Button.png" HeightRequest="100" WidthRequest="100" x:Name="QookButton" VerticalOptions="Fill" HorizontalOptions="Fill" />
+			</StackLayout>
+
+			<!--Image Source="StartScreen.png" VerticalOptions="StartAndExpand" 
+			HorizontalOptions="Fill"  
+			Grid.RowSpan="4" Grid.Row="0"/-->
+			
+
 			<!---<ListView ItemsSource="{Binding SearchListOfIngredients}" Grid.Row="2" ItemTapped="AddItemToResultList"/>
 			<ListView ItemsSource="{Binding SelectedListOfIngredients}" Grid.Row="3" ItemTapped="DeleteItemFromResultList"/>-->
 		</Grid>
-</ScrollView>
 	</ContentPage.Content>
 </ContentPage>
