--- a/QookleApp/Views/MainPage.xaml
+++ b/QookleApp/Views/MainPage.xaml
@@ -1,43 +1,48 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
  <ContentPage.Content>
-   <ScrollView BackgroundColor="Yellow">
-		<RelativeLayout>
-			<Image Source="StartScreen.jpg" Aspect="Fill" VerticalOptions="Fill" />
-			<StackLayout>
-				<StackLayout Grid.Row="0" HorizontalOptions="Fill" VerticalOptions="Center"  Padding="10, 0, 0, 0" Orientation="Horizontal" x:Name="FaceBookAccountLayout">
-					<local:RoundedImage HeightRequest="80" WidthRequest="80"  x:Name="FacebookPictureImage" IsVisible="false" VerticalOptions="Fill" HorizontalOptions="StartAndExpand"  />
-					<Label Text="" x:Name="FacebookUser" VerticalOptions="Center"/>
-					<local:RoundedImage HeightRequest="80" WidthRequest="80"  x:Name="FacebookImageButton" Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand"  />
-				</StackLayout>
-				
-				<Grid Grid.Row="1" HorizontalOptions="Fill">
-					<Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Fill" HorizontalOptions="Fill"/>
-				</Grid>
-				
-				<StackLayout Padding="8, 0, 8, 0" Grid.Row="1" VerticalOptions="End">
-					<Entry BackgroundColor="White" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
-				</StackLayout>
-				
-				<Grid VerticalOptions="FillAndExpand" Padding="8, 0, 8, 0" MinimumHeightRequest="200" HeightRequest="200">
+			<Grid>
 				<Grid.RowDefinitions>
--  				 <RowDefinition Height="Auto"/>
--  				 <RowDefinition Height="*"/>
--  				 </Grid.RowDefinitions>
-					<local:WrapLayout Grid.Row="0" x:Name="SelectedIngredientsList" VerticalOptions="FillAndExpand"  Orientation="Horizontal"/>
-					<local:WrapLayout Grid.Row="1" x:Name="SearchedIngredientsList"  Orientation="Horizontal"  />
-				</Grid>
-				
-				<Grid Grid.Row="3" HeightRequest="100" x:Name="QookButtonGrid" VerticalOptions="End">
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="Auto"/>
+				</Grid.RowDefinitions>
+				<Image Source="StartScreen.jpg" Aspect="AspectFit" VerticalOptions="Start" HorizontalOptions="Fill" Grid.Row="0" Grid.RowSpan="6"/>
+
+				<Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Padding="5, 5, 0, 0" x:Name="FaceBookAccountLayout" >
 				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="Auto"/>
 					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="100"/>
-					<ColumnDefinition Width="*"/>
--  				 </Grid.ColumnDefinitions>
-					<local:RoundedImage  Source="Button.jpg" Grid.Column="1"  x:Name="QookButton"     />
+					<ColumnDefinition Width="Auto"/>
+				</Grid.ColumnDefinitions>
+					<local:RoundedImage Grid.Column="0" HeightRequest="80" WidthRequest="80"  x:Name="FacebookPictureImage" IsVisible="false" HorizontalOptions="Start"  />
+					<Label Grid.Column="1" Text="" x:Name="FacebookUser" HorizontalOptions="Start" VerticalOptions="Center"/>
+					<local:RoundedImage Grid.Column="3" HeightRequest="80" WidthRequest="80"  x:Name="FacebookImageButton" Source="facebook.png" HorizontalOptions="EndAndExpand"  />
+				</Grid>
+
+				<Grid Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Center" BackgroundColor="Red">
+					<Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Start" HorizontalOptions="Center"/>
+				</Grid>
+
+				<Grid VerticalOptions="FillAndExpand"  Padding="8, 0, 8, 0"  Grid.Row="2" >
+
+					
+				</Grid>
+
+				<StackLayout Padding="8, 0, 8, 0" Grid.Row="3" VerticalOptions="StartAndExpand">
+					<Entry BackgroundColor="White" VerticalOptions="Start" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
+					<local:WrapLayout  x:Name="SelectedIngredientsList" VerticalOptions="FillAndExpand"  Orientation="Horizontal"/>
+					<local:WrapLayout  x:Name="SearchedIngredientsList"  Orientation="Horizontal" />
+				</StackLayout>
+								
+				<Grid Grid.Row="4" x:Name="QookButtonGrid" HeightRequest="100" HorizontalOptions="Center" VerticalOptions="EndAndExpand">
+					<local:RoundedImage Source="Button.jpg" HeightRequest="100" x:Name="QookButton" />
+					
 				</Grid>			
-			</StackLayout>		
-		</RelativeLayout>		
-	</ScrollView>
+			</Grid>		
  </ContentPage.Content>
 </ContentPage>
