--- a/QookleApp/Views/Controls/RecipeListView.xaml
+++ b/QookleApp/Views/Controls/RecipeListView.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.RecipeListView" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
     <ContentView.Content>
         <StackLayout>
-            <Grid x:Name="MainRecipeListElementGrid">
+            <Grid x:Name="MainRecipeListElementGrid" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -21,7 +21,7 @@
                 <Label Text="{Binding title}" HorizontalOptions="Start" Grid.Row="0" Grid.Column="1" VerticalOptions="Center" Font="Bold,Small" TextColor="Black"/>
                 <Label Text="{Binding publisher}" HorizontalOptions="Start" TextColor="#00A2FF" Grid.Row="1" Grid.Column="1" VerticalOptions="Center" Font="Bold,Small"/>
                 <StackLayout Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="2" Padding="10, 0, 10, 0">
-                    <Image Source="{Binding img}" HorizontalOptions="Fill" />
+                    <Image Source="{Binding imgGoodQuality}" HorizontalOptions="Fill" VerticalOptions="Fill"/>
                 </StackLayout>
             </Grid>
 
