--- a/QookleApp/Views/MainPage.xaml
+++ b/QookleApp/Views/MainPage.xaml
@@ -1,66 +1,72 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
+<ContentPage 
+xmlns="http://xamarin.com/schemas/2014/forms" BackgroundImage="StartScreen.jpg" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.MainPage" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
  <ContentPage.Content>
-			<Grid x:Name="MainGrid">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="Auto"/>
-				</Grid.RowDefinitions>
-				<Image Source="StartScreen.jpg" Aspect="AspectFit" VerticalOptions="Start" HorizontalOptions="Fill" Grid.Row="0" Grid.RowSpan="6" x:Name="BackgroundImg"/>
 
-				<Grid Grid.Row="0" x:Name="HeaderContainer" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="*"/>
-				</Grid.RowDefinitions>
-				<Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Padding="5, 5, 0, 0" x:Name="FaceBookAccountLayout" >
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="Auto"/>
-					<ColumnDefinition Width="Auto"/>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="Auto"/>
-				</Grid.ColumnDefinitions>
+  <!---<Grid RowSpacing="0" ColumnSpacing="0">
 
-					<local:RoundedImage Grid.Column="0" HeightRequest="80" WidthRequest="80"  x:Name="FacebookPictureImage" IsVisible="false" HorizontalOptions="Start"  />
-					<Label Grid.Column="1" Text="" x:Name="FacebookUser" HorizontalOptions="Start" VerticalOptions="Center"/>
-					<Grid Grid.Column="2"/>
-					<local:RoundedImage Grid.Column="3" HeightRequest="80" WidthRequest="80"  x:Name="FacebookImageButton" Source="facebook.png" HorizontalOptions="End"  />
-				</Grid>
+  <Grid HorizontalOptions="Fill">
 
-				<Grid Grid.Row="1" Padding="10,0,0,10" VerticalOptions="Center" HorizontalOptions="Center">
+  <Grid.RowDefinitions>
+-   <RowDefinition Height="Auto"/>
+-   <RowDefinition Height="*"/>
+-   
+-   <RowDefinition Height="*"/>
+-   <RowDefinition Height="Auto"/>
+-  </Grid.RowDefinitions>
 
+-  
+   <Image Source="StartScreen.jpg" Aspect="Fill" VerticalOptions="Fill" Grid.ColumnSpan="4" />-->
+   <ScrollView>
+   <StackLayout>
+   <StackLayout Grid.Row="0" HorizontalOptions="Fill" VerticalOptions="Center" Padding="10, 0, 0, 0" Orientation="Horizontal">
+    <local:RoundedImage HeightRequest="80" WidthRequest="80"  x:Name="FacebookPictureImage" IsVisible="false" VerticalOptions="Fill" HorizontalOptions="StartAndExpand"  />
+    <Label Text="" x:Name="FacebookUser" VerticalOptions="Center"/>
+   </StackLayout>
+   <StackLayout Grid.Row="0" HorizontalOptions="End" Padding="0, 0, 0, -20" HeightRequest="80">
+    <local:RoundedImage HeightRequest="80" WidthRequest="80"  x:Name="FacebookImageButton" Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand"  />
+   </StackLayout>
+   <Grid Grid.Row="1" HorizontalOptions="Fill">
+    <Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Fill" HorizontalOptions="Fill"/>
+   </Grid>
 
-					<Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Center" />
-				
+   <StackLayout Padding="8, 0, 8, 0" Grid.Row="1" VerticalOptions="End">
+    <Entry  BackgroundColor="White" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
+   </StackLayout>
 
-				</Grid>
-				</Grid>
+   <Grid VerticalOptions="FillAndExpand" Padding="8, 0, 8, 0" >
+   <Grid.RowDefinitions>
+-   <RowDefinition Height="Auto"/>
+-   <RowDefinition Height="*"/>
+-   </Grid.RowDefinitions>
+    <local:WrapLayout  Grid.Row="0" x:Name="SelectedIngredientsList" VerticalOptions="FillAndExpand"  Orientation="Horizontal"/>
+    
+    <local:WrapLayout  Grid.Row="1" x:Name="SearchedIngredientsList"  Orientation="Horizontal"  />
+   
+   </Grid>
+  
+   <Grid Grid.Row="3" HeightRequest="100"  VerticalOptions="End">
 
-				<Grid Grid.Row="1" VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand" x:Name="BottomContent" Padding="8,0,8,0">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="*"/>
-				</Grid.RowDefinitions>
+   <Grid.ColumnDefinitions>
+    <ColumnDefinition Width="*"/>
+    <ColumnDefinition Width="Auto"/>
+    <ColumnDefinition Width="*"/>
+-   </Grid.ColumnDefinitions>
+    <local:RoundedImage HeightRequest="100" WidthRequest="100" Source="Button.jpg"  Grid.Column="1"  x:Name="QookButton"     />
+   </Grid>
 
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="Auto"/>
-				</Grid.ColumnDefinitions>
-									
-				<Entry BackgroundColor="White"  VerticalOptions="Start" TextColor="Silver" TextChanged="TextChanged" Placeholder="Inserisci qui gli ingredienti" Text="{Binding TextToSearch}" x:Name="TextEntry"/>
+  
+   <!--Image Source="StartScreen.png" VerticalOptions="StartAndExpand" 
+   HorizontalOptions="Fill"  
+   Grid.RowSpan="4" Grid.Row="0"/-->
+   
 
-					<local:WrapLayout  x:Name="SelectedIngredientsList"  Grid.Row="1" Orientation="Horizontal" />
-						<local:WrapLayout  x:Name="SearchedIngredientsList"  Grid.Row="2" Orientation="Horizontal" />
-								
-				<StackLayout Grid.Row="3" x:Name="QookButtonGrid" HorizontalOptions="Center" VerticalOptions="End">
-					<local:RoundedImage Source="Button.jpg" x:Name="QookButton"  />					
-				</StackLayout>	
-				</Grid>		
-			</Grid>		
- </ContentPage.Content>
+   <!---<ListView ItemsSource="{Binding SearchListOfIngredients}" Grid.Row="2" ItemTapped="AddItemToResultList"/>
+   <ListView ItemsSource="{Binding SelectedListOfIngredients}" Grid.Row="3" ItemTapped="DeleteItemFromResultList"/>-->
+  <!---</Grid>
+  </Grid>-->
+
+   </StackLayout>
+  </ScrollView>
+  </ContentPage.Content>
 </ContentPage>
