--- a/QookleApp/Views/Controls/RecipeListView.xaml
+++ b/QookleApp/Views/Controls/RecipeListView.xaml
@@ -1,34 +1,33 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.Views.Controls.RecipeListView" xmlns:local="clr-namespace:QookleApp;assembly=QookleApp">
-    <ContentView.Content>
-        <StackLayout>
-            <Grid x:Name="MainRecipeListElementGrid" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="20"/>
-                    <RowDefinition Height="20"/>
-                    <RowDefinition Height="200"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalOptions="Fill" VerticalOptions="Fill">
+  <ContentView.Content>
+    <StackLayout>
+      <Grid x:Name="MainRecipeListElementGrid" >
+        <Grid.RowDefinitions>
+          <RowDefinition Height="20"/>
+          <RowDefinition Height="20"/>
+          <RowDefinition Height="200"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="40"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalOptions="Fill" VerticalOptions="Fill">
 
-                    <!--<local:RoundedImage Source="{Binding publisherimage}" Aspect="Fill" HorizontalOptions="Center"  VerticalOptions="Center" HeightRequest="40" WidthRequest="40"/>-->
-                    <!--<local:BorderedImage Source="border.png" Aspect="Fill" HeightRequest="40" WidthRequest="40"/>-->
-                </Grid>
+          <!--<local:RoundedImage Source="{Binding publisherimage}" Aspect="Fill" HorizontalOptions="Center"  VerticalOptions="Center" HeightRequest="40" WidthRequest="40"/>-->
+          <!--<local:BorderedImage Source="border.png" Aspect="Fill" HeightRequest="40" WidthRequest="40"/>-->
+        </Grid>
 
-                <Label Text="{Binding title}" HorizontalOptions="Start" Grid.Row="0" Grid.Column="1" VerticalOptions="Center" Font="Bold,Medium" TextColor="Black" HeightRequest="18" />
-                <Label Text="{Binding publisher}" HorizontalOptions="Start" TextColor="#00A2FF" Grid.Row="1" Grid.Column="1" VerticalOptions="Center" Font="Bold,Small" HeightRequest="18"/>
-                <StackLayout Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="2" HorizontalOptions="FillAndExpand">
-                    <Image Source="{Binding imgGoodQuality}" HorizontalOptions="Fill" VerticalOptions="Fill" Aspect="Fill" HeightRequest="180"/>
-                </StackLayout>
-            </Grid>
-
-
-            <Grid x:Name="MainAdvertisementGrid" IsVisible="false">
-            <Label Text="ADVERTISEMENT OHOHO" HorizontalOptions="Start" VerticalOptions="Center" Font="Bold,Medium" TextColor="Black"/>
-            </Grid>
+        <Label Text="{Binding title}" HorizontalOptions="Start" Grid.Row="0" Grid.Column="1" VerticalOptions="Center" Font="Bold,Medium" TextColor="Black" HeightRequest="25" />
+        <Label Text="{Binding publisher}" HorizontalOptions="Start" TextColor="#00A2FF" Grid.Row="1" Grid.Column="1" VerticalOptions="Center" Font="Bold,Small" HeightRequest="25"/>
+        <StackLayout Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="2" HorizontalOptions="FillAndExpand">
+          <Image Source="{Binding imgGoodQuality}" HorizontalOptions="Fill" VerticalOptions="Fill" Aspect="AspectFit" HeightRequest="180"/>
         </StackLayout>
-    </ContentView.Content>
+      </Grid>
+
+      <Grid x:Name="MainAdvertisementGrid"  IsVisible="false">
+        <Label Text="ADVERTISEMENT OHOHO" HorizontalOptions="FillAndExpand" HeightRequest="25" VerticalOptions="FillAndExpand" XAlign="Center" YAlign="Center" Font="Bold,Medium" TextColor="Black"/>
+      </Grid>
+    </StackLayout>
+  </ContentView.Content>
 </ContentView>
