--- a/QookleApp/Views/MainPageView.xaml
+++ b/QookleApp/Views/MainPageView.xaml
@@ -1,39 +1,31 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <ContentPage
-    xmlns="http://xamarin.com/schemas/2014/forms" BackgroundImage="StartScreen.jpg"
+    xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QookleApp.Views.MainPageView"
     xmlns:local="clr-namespace:QookleApp;assembly=QookleApp"
     xmlns:controls="clr-namespace:QookleApp.Views.Controls;assembly=QookleApp">
     <ContentPage.Content>
-
-        <!---<Grid RowSpacing="0" ColumnSpacing="0">
-
   <Grid HorizontalOptions="Fill">
 
   <Grid.RowDefinitions>
--   <RowDefinition Height="Auto"/>
--   <RowDefinition Height="*"/>
--   
--   <RowDefinition Height="*"/>
--   <RowDefinition Height="Auto"/>
--  </Grid.RowDefinitions>
-
--  
-   <Image Source="StartScreen.jpg" Aspect="Fill" VerticalOptions="Fill" Grid.ColumnSpan="4" />-->
-        <ScrollView>
+   <RowDefinition Height="*"/>
+  </Grid.RowDefinitions>
+    
+    <Image Source="StartScreen.jpg" Aspect="AspectFill" VerticalOptions="Fill" Grid.Row="0" />
+    <ScrollView Grid.Row="0">
         <StackLayout>
-            <StackLayout Grid.Row="0" HorizontalOptions="Fill" VerticalOptions="Center" Padding="10, 0, 0, 0"
+            <StackLayout HorizontalOptions="Fill" VerticalOptions="Center" Padding="10, 0, 0, 0"
                          Orientation="Horizontal">
                 <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookPictureImage"
                                        IsVisible="false" VerticalOptions="Fill" HorizontalOptions="StartAndExpand" />
                 <Label Text="" x:Name="FacebookUser" VerticalOptions="Center" />
             </StackLayout>
-            <StackLayout Grid.Row="0" HorizontalOptions="End" Padding="0, 0, 0, -20" HeightRequest="80">
+            <StackLayout HorizontalOptions="End" Padding="0, 0, 0, -20" HeightRequest="80">
                 <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookImageButton"
                                        Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand" />
             </StackLayout>
-            <Grid Grid.Row="1" HorizontalOptions="Fill">
+            <Grid HorizontalOptions="Fill">
                 <Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Fill"
                        HorizontalOptions="Fill" />
             </Grid>
@@ -53,29 +45,17 @@
                 <controls:WrapLayout Grid.Row="1" x:Name="SearchedIngredientsList" Orientation="Horizontal" />
             </Grid>
 
-            <Grid Grid.Row="3" HeightRequest="100" VerticalOptions="End">
-
+            <Grid HeightRequest="100" VerticalOptions="End">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="10" />
                 </Grid.ColumnDefinitions>
-                <controls:RoundedImage HeightRequest="100" WidthRequest="100" Source="Button.jpg" Grid.Column="1"
-                                       x:Name="QookButton" />
+                <Image HeightRequest="100" WidthRequest="100" Source="Button_r.png" Grid.Column="1" x:Name="QookButton" />
             </Grid>
 
-
-            <!--Image Source="StartScreen.png" VerticalOptions="StartAndExpand" 
-   HorizontalOptions="Fill"  
-   Grid.RowSpan="4" Grid.Row="0"/-->
-
-
-            <!---<ListView ItemsSource="{Binding SearchListOfIngredients}" Grid.Row="2" ItemTapped="AddItemToResultList"/>
-   <ListView ItemsSource="{Binding SelectedListOfIngredients}" Grid.Row="3" ItemTapped="DeleteItemFromResultList"/>-->
-            <!---</Grid>
-  </Grid>-->
-
         </StackLayout>
-        </ScrollView>
+    </ScrollView>
+  </Grid>
     </ContentPage.Content>
 </ContentPage>
