--- a/QookleApp/Views/MainPageView.xaml
+++ b/QookleApp/Views/MainPageView.xaml
@@ -14,28 +14,35 @@
     
     <Image Source="StartScreen.jpg" Aspect="AspectFill" VerticalOptions="Fill" Grid.Row="0" />
     <ScrollView Grid.Row="0">
-        <StackLayout>
-            <StackLayout HorizontalOptions="Fill" VerticalOptions="Center" Padding="10, 0, 0, 0"
+        <Grid>
+          <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+          </Grid.RowDefinitions>
+          
+            <StackLayout Grid.Row="0" HorizontalOptions="Fill" VerticalOptions="Center" Padding="10, 0, 0, 0"
                          Orientation="Horizontal">
-                <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookPictureImage"
-                                       IsVisible="false" VerticalOptions="Fill" HorizontalOptions="StartAndExpand" />
-                <Label Text="" x:Name="FacebookUser" VerticalOptions="Center" />
+              <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookPictureImage"
+                                     IsVisible="false" VerticalOptions="Fill" HorizontalOptions="StartAndExpand" />
+              <Label Text="" x:Name="FacebookUser" VerticalOptions="Center" />
             </StackLayout>
-            <StackLayout HorizontalOptions="End" Padding="0, 0, 0, -20" HeightRequest="80">
-                <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookImageButton"
-                                       Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand" />
+            <StackLayout Grid.Row="1" HorizontalOptions="End" Padding="0, 0, 0, -20" HeightRequest="80">
+              <controls:RoundedImage HeightRequest="80" WidthRequest="80" x:Name="FacebookImageButton"
+                                     Source="facebook.png" VerticalOptions="Fill" HorizontalOptions="EndAndExpand" />
             </StackLayout>
-            <Grid HorizontalOptions="Fill">
+            <Grid Grid.Row="2" HorizontalOptions="Fill">
                 <Image HeightRequest="120" x:Name="HeaderImage" Source="Qookle.jpg" VerticalOptions="Fill"
                        HorizontalOptions="Fill" />
             </Grid>
-
-            <StackLayout Padding="8, 0, 8, 0" Grid.Row="1" VerticalOptions="End">
-                <Entry BackgroundColor="White" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti"
-                       Text="{Binding TextToSearch}" x:Name="TextEntry" />
+            <StackLayout Grid.Row="3" Padding="8, 0, 8, 0" VerticalOptions="End">
+              <Entry BackgroundColor="White" TextColor="Silver" Placeholder="Inserisci qui gli ingredienti"
+                     Text="{Binding TextToSearch}" x:Name="TextEntry" />
             </StackLayout>
-
-            <Grid VerticalOptions="FillAndExpand" Padding="8, 0, 8, 0">
+            <Grid Grid.Row="4" VerticalOptions="FillAndExpand" Padding="8, 0, 8, 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
@@ -44,17 +51,16 @@
                                      Orientation="Horizontal" />
                 <controls:WrapLayout Grid.Row="1" x:Name="SearchedIngredientsList" Orientation="Horizontal" />
             </Grid>
+            <Grid Grid.Row="5" HeightRequest="100" VerticalOptions="End" Padding="8, 0, 8, 0">
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+              </Grid.ColumnDefinitions>
 
-            <Grid HeightRequest="100" VerticalOptions="End">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="10" />
-                </Grid.ColumnDefinitions>
-                <Image HeightRequest="100" WidthRequest="100" Source="Button_r.png" Grid.Column="1" x:Name="QookButton" />
+              <Image HeightRequest="100" WidthRequest="100" Source="Button_r.png" Grid.Column="1" x:Name="QookButton" />
             </Grid>
-
-        </StackLayout>
+        </Grid>
     </ScrollView>
   </Grid>
     </ContentPage.Content>
